bulk dataplane edition
