# rainbow-dataplane/src/entities/dataplane_transfer_logs/mod.rs
@@ -1,0 +1,20 @@
+use crate::data::entities::dataplane_transfer_logs;
+use serde::{Deserialize, Serialize};
+use uuid::Uuid;
+
+pub mod dataplane_transfer_logs_entity;
+
+#[derive(Debug, Serialize, Deserialize)]
+#[serde(rename_all = "camelCase")]
+pub struct DataplaneTransferLogDto {
+    #[serde(flatten)]
+    pub inner: dataplane_transfer_logs::Model,
+}
+
+#[async_trait::async_trait]
+pub trait DataplaneTransferLogsEntitiesTrait: Send + Sync + 'static {
+    async fn get_transfer_logs_by_transfer_id(
+        &self,
+        transfer_id: Uuid,
+    ) -> anyhow::Result<Vec<DataplaneTransferLogDto>>;
+}
