# rainbow-dataplane/src/entities/transfer_events/mod.rs
@@ -1,10 +1,11 @@
 pub(crate) mod transfer_event_entity;
 
 use crate::data::entities::transfer_event;
-use crate::data::entities::transfer_event::NewTransferEventModel;
+use crate::data::entities::transfer_event::{LogLevel, NewTransferEvent};
 use serde::{Deserialize, Serialize};
 use serde_json::Value;
 use urn::Urn;
+use uuid::Uuid;
 
 #[derive(Debug, Serialize, Deserialize)]
 #[serde(rename_all = "camelCase")]
@@ -17,25 +18,22 @@ pub struct TransferEventDto {
 #[serde(rename_all = "camelCase")]
 #[serde(deny_unknown_fields)]
 pub struct NewTransferEventDto {
-    pub id: Urn,
-    pub dataplane_process_id: Urn,
-    pub from: String,
-    pub to: String,
-    pub payload: Value,
+    pub transfer_id: Uuid,
+    pub level: LogLevel,
+    pub component: String,
+    pub message: String,
+    pub data: Option<Value>,
 }
 
-#[derive(Debug, Serialize, Deserialize, Clone)]
-#[serde(rename_all = "camelCase")]
-#[serde(deny_unknown_fields)]
-pub struct EditTransferEventDto {
-    pub from: Option<String>,
-    pub to: Option<String>,
-    pub payload: Option<Value>,
-}
-
-impl From<NewTransferEventDto> for NewTransferEventModel {
+impl From<NewTransferEventDto> for NewTransferEvent {
     fn from(value: NewTransferEventDto) -> Self {
-        Self { from: value.from, to: value.to, payload: value.payload }
+        Self {
+            transfer_id: value.transfer_id,
+            level: value.level,
+            component: value.component,
+            message: value.message,
+            data: value.data,
+        }
     }
 }
 
